  in a space-delimited format acceptable to other languages(i.e. shell/Perl)
  that is also easily passable to SSH.
* Cleanup: Renaming instance variables with a naming convention less lame than
  thisThing, thisOtherThing, etc.
- Cleanup: Take a look at the various modes the distribulator now supports
  and verify if the "VerboseMode" internal flags are still truly necessary.

Idea List For v0.7 (A little farther out)
-----------------------------------------
? Replacing the HostPinger's functionality with a better,
  timeout-capable socket conneciton test.  Good idea?  Hmm...
- Ability to use regular expressions to match server names.
- Ability to use a new run command keyword: "parallel".
  This will run the given command in background threads in parallel.
  Output will be spooled to one file per server in a standard output directory.
- Single remote server file to single remote server file copy.
(i.e. scp awd@www01:/tmp/blah awd@www02:/some/other/path/)
- Single remote server file to multiple remote servers file copy.
(i.e. scp awd@www01:/tmp/blah awd@www01,www02,www03:/some/other/path/)
- Multiple remote server file to local file copy.  This would have to somehow
  rename the files as it copies them down, perhaps based on hostname prefix.
(i.e. scp awd@www01,www02,www03:/tmp/blah .)

Idea List For v1.0 (Will we ever get here?  Who knows!)
-------------------------------------------------------
Valid Ideas:
- A decent install / setup system!  Check into python's distutils.
- OO design sanity fixes.  Need to start using static methods
  where appropriate.
- Some sort of respectable regression test suite.
  Can be done using batch files and expect?
- A server mode in which the distribulator will check an incoming command
  queue(a file or two?) then run those on what it considers to be its
  siblings.  This would allow commands and files to be routed to
  X number of servers in a speedy fashion.
Pie-In-The-Sky Ideas:
- Sudo-based remote permissions checking ???